--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Release
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
           tagRegex: "v(.*)"
       - name: Set version
         run: |
-          echo "export default \"${$GIT_TAG_NAME}\";" > version.ts
+          echo "export default \"${GIT_TAG_NAME}\";" > version.ts
       - name: Build
         run: |
           ./scripts/compile.sh
